refactor: restructure DTOs and relationship mappings
DTOs + SummaryDTOs + Mappers + Services + Controllers