@@ -1,34 +1,68 @@
 package com.ums.ums_backend.dto.mapper;
 
-import com.ums.ums_backend.dto.DepartmentDTO;
+import com.ums.ums_backend.dto.response.DepartmentResponseDTO;
+import com.ums.ums_backend.dto.request.DepartmentCreateRequestDTO;
+import com.ums.ums_backend.dto.summary.CourseSummaryDTO;
+import com.ums.ums_backend.dto.summary.DepartmentSummaryDTO;
+import com.ums.ums_backend.entity.Course;
 import com.ums.ums_backend.entity.Department;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
-
 @Component
+@AllArgsConstructor
 public class DepartmentMapper {
 
-    public DepartmentDTO toDTO(Department department) {
+    private FacultyMapper facultyMapper;
+
+    public DepartmentResponseDTO toDTO(Department department) {
         if (department == null) return null;
 
-        DepartmentDTO dto = new DepartmentDTO();
+        DepartmentResponseDTO dto = new DepartmentResponseDTO();
+
         dto.setId(department.getId());
-        dto.setFacultyId(department.getFaculty() != null ? department.getFaculty().getId() : null);
+        dto.setFaculty(facultyMapper.toSummaryDTO(department.getFaculty()));
         dto.setName(department.getName());
         dto.setCode(department.getCode());
         dto.setDescription(department.getDescription());
 
         if (department.getCourses() != null) {
-            dto.setCourseIds(department.getCourses().stream()
-                    .map(c -> c.getId())
-                    .collect(Collectors.toList()));
+            dto.setCourses(department.getCourses()
+                    .stream()
+                    .map(this::toCourseSummaryDTO)
+                    .toList());
         }
 
         return dto;
     }
 
-    public Department toEntity(DepartmentDTO dto) {
+    private CourseSummaryDTO toCourseSummaryDTO(Course course) {
+
+        if (course == null) return null;
+
+        CourseSummaryDTO dto = new CourseSummaryDTO();
+
+        dto.setId(course.getId());
+        dto.setCode(course.getCode());
+        dto.setName(course.getName());
+        dto.setDescription(course.getDescription());
+
+        return dto;
+    }
+
+    public DepartmentSummaryDTO toSummaryDTO(Department department) {
+        if (department == null) return null;
+
+        DepartmentSummaryDTO summaryDTO = new DepartmentSummaryDTO();
+        summaryDTO.setId(department.getId());
+        summaryDTO.setName(department.getName());
+        summaryDTO.setCode(department.getCode());
+        summaryDTO.setDescription(department.getDescription());
+
+        return summaryDTO;
+    }
+
+    public Department toEntity(DepartmentResponseDTO dto) {
         if (dto == null) return null;
 
         Department department = new Department();
@@ -36,6 +70,21 @@ public class DepartmentMapper {
         department.setName(dto.getName());
         department.setCode(dto.getCode());
         department.setDescription(dto.getDescription());
+
+        return department;
+    }
+
+    public Department toEntity(DepartmentCreateRequestDTO createRequestDTO) {
+
+        if (createRequestDTO == null) {
+            return null;
+        }
+
+        Department department = new Department();
+
+        department.setName(createRequestDTO.getName());
+        department.setCode(createRequestDTO.getCode());
+        department.setDescription(createRequestDTO.getDescription());
 
         return department;
     }
